# study20220511

./: docker-compose.yml
rust/: Dockerfile
rust/study/: Cargo.toml
rust/study/src/: main.rs
