[package]
name = "study"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres-types = {version="~0.2.3", features=["derive", "with-serde_json-1"]}
serde = {version="~1", features=["derive"]}
serde_json = "~1"
tokio = {version="1.18.0", features=["macros", "rt-multi-thread"]}
tokio-postgres = "~0.7.6"
string_enum = "~0.3.1"
thiserror = "~1.0.31"